--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -37,6 +37,7 @@ body {
 
 .footer {
     padding-top: 19px;
+    margin-top: 25px;
     color: #777;
     border-top: 1px solid #e5e5e5;
 }
@@ -90,7 +91,7 @@ body {
 /* MY STYLES */
 
 li.list-group-item {
-button {
-float: right;
-}
+    button {
+        float: right;
+    }
 }
