--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,4 +1,8 @@
 <div class="col-sm-8 col-md-6 col-md-offset-3 col-sm-offset-2">
-    <p>Logged in: {{isAuthenticated()}}</p>
-    <p>Logged in as id: {{me.id}}</p>
+    <p>Logged in: <b>{{isAuthenticated()}}</b>
+    </p>
+    <p>Logged in as id: <b>{{me.id}}</b>
+    </p>
+    <p>Member since: <b>{{me.createdAt | date:'medium'}}</b>
+    </p>
 </div>
