Big green button is now login

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
     <p class="lead">
         Your essential vehicle helper tool
     </p>
-    <p><a class="btn btn-lg btn-success" ng-href="#/">Get started! <span class="glyphicon glyphicon-ok"></span></a>
+    <p><a class="btn btn-lg btn-success" ng-click="googleLogin()">Login with Google</span></a>
     </p>
 </div>
 
