--- a/app/views/vehicle.html
+++ b/app/views/vehicle.html
@@ -1,11 +1,30 @@
 <h1>{{vehicle.year | date:'yyyy'}} {{vehicle.make}}</h1>
 
-<h3>Add fuel up</h3>
+<div class="col-sm-8 col-md-6 col-md-offset-3 col-sm-offset-2">
+    <h3>Add fuel up</h3>
 
-<h3>Add oil change</h3>
+    <form name="addFuelUpFrm">
+        <div class="form-group">
+            <input class="form-control" ng-model="litres" placeholder="litres" required type="number" min="0" max="100" </input>
+        </div>
+        <div class="form-group">
+            <input class="form-control" ng-model="costPerLitre" placeholder="cost per litre" required type="number"></input>
+        </div>
+        <div class="form-group">
+            <input class="form-control" ng-model="kilometersSinceLastFuelUp" placeholder="km since last fuel up" required type="number"></input>
+        </div>
+    </form>
+    <button type="button" class="btn btn-primary" ng-click="addFuelUp()" ng-disabled="addFuelUpFrm.$invalid">Add Fuelup</button>
+</div>
 
-<h3>Add warrant of fitness</h3>
+<div class="col-sm-8 col-md-6 col-md-offset-3 col-sm-offset-2">
 
-<h3>Add registration</h3>
+    <h3>Add oil change</h3>
 
-<h3>History</h3>
+    <h3>Add warrant of fitness</h3>
+
+    <h3>Add registration</h3>
+
+    <h3>History</h3>
+
+</div>
