--- a/app/views/vehicle.html
+++ b/app/views/vehicle.html
@@ -5,7 +5,7 @@
 
     <form name="addFuelUpFrm">
         <div class="form-group">
-            <input class="form-control" ng-model="litres" placeholder="litres" required type="number" min="0" max="100" </input>
+            <input class="form-control" ng-model="litres" placeholder="litres" required type="number" min="0" max="100"></input>
         </div>
         <div class="form-group">
             <input class="form-control" ng-model="costPerLitre" placeholder="cost per litre" required type="number"></input>
