Add oil changes and maintenance

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,17 +8,17 @@
 </div>
 
 <div class="row marketing">
-    <h4>Log maintenance</h4>
+    <h4><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Log maintenance</h4>
     <p>
         Never forget the last time you did an oil change
     </p>
 
-    <h4>Mileage tracking</h4>
+    <h4><span class="glyphicon glyphicon-road" aria-hidden="true"></span> Mileage tracking</h4>
     <p>
         Get stats on how fuel efficient your vehicle is
     </p>
 
-    <h4>Share</h4>
+    <h4><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Share</h4>
     <p>
         Show off or give prospective buyers confidence
     </p>
