--- a/app/views/vehicle.html
+++ b/app/views/vehicle.html
@@ -31,6 +31,8 @@
     <button type="button" class="btn btn-primary" ng-click="addOilChange()">Add oil change</button>
 
     <p>Your last oil change was x days ago on dd/mm/yy</p>
+    <h4>Last oil changes:</h4>
+    <p ng-repeat="oilChange in oilChanges">On {{oilChange.createdAt}}</p>
 </div>
 
 <div class="col-sm-8 col-md-6 col-md-offset-3 col-sm-offset-2">
